Added back navigation

--- a/src/main/resources/templates/accountList.html
+++ b/src/main/resources/templates/accountList.html
@@ -5,6 +5,11 @@
 <h1>Hello, {{.}}!</h1>
 {{/name}}
 
+<p>
+    <a href="/">Back Home</a> | <a href="/customerList?bankID={{bank.bankID}}">Back to Customer List</a>
+</p>
+
+
 <h2>Please select an account ...</h2>
 
 <ul>
