oh boy here we go

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,9 +1,14 @@
 <html>
+    <head>
+        <link href="css/homestyle.css" rel="stylesheet" type="text/css"/>
+    </head>
 <body>
 
-{{#name}}
-<h1>Hello, {{.}}!</h1>
-{{/name}}
+    <div class="welcomebanner">
+        {{#name}}
+        <h1>Hello, {{.}}!</h1>
+        {{/name}}
+    </div>
 
 <h2>Please select a Bank ...</h2>
 
