--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,10 +8,17 @@
         {{#name}}
         <h1>Hello, {{.}}!</h1>
         {{/name}}
+        <div class="navmenu">
+            <ul class="navoptions">
+                <li><a href="/">Home</a></li>
+                <li><a href="/customerlist">Customer List</a></li>
+                <li><a href="/login">Login/Logout</a></li>
+            </ul>
+        </div>
     </div>
-
+    <div class="contentBlock">
 <h2>Please select a Bank ...</h2>
-
+    <div class="banklist">
 <ul>
     {{#bankList}}
     {{#.}}
@@ -21,14 +28,18 @@
     {{/.}}
     {{/bankList}}
 </ul>
+</div>
+</div>
+    {{^name}}
+    <div class="loginview">
 
+        <h2>Enter your login information below please!</h2>
+        <form action="/login" method="post">
+            <input type="text" placeholder="Enter your name" name="userName"/>
+            <button type="submit">Login</button>
+        </form>
+    </div>
+        {{/name}}
 
-{{^name}}
-<h2>Enter your login information below please!</h2>
-<form action="/login" method="post">
-    <input type="text" placeholder="Enter your name" name="userName"/>
-    <button type="submit">Login</button>
-</form>
-{{/name}}
 </body>
 </html>
